2008-05-05 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Applied patch by Borut Razem to fix buffer overflow in LST file
  generation (bug #1922419)

2008-03-21 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Added support for 18f2450, 18f4450, 18f2523

2008-03-21 David Barnett <daviebdawg@gmail.com>
  * Fixed bug with multiple spaces in #define directives (bug #1860881)

2007-11-22 David Barnett <daviebdawg@gmail.com>
  * Fix bug with #v substituted labels in code_pack sections

2007-11-21 David Barnett <daviebdawg@gmail.com>
  * Updated gputils manual (gputils.lyx) to LyX 1.5.1 and fixed outdated
  information

2007-11-20 David Barnett <daviebdawg@gmail.com>
  * Applied patch by Michael Ballbach to support code_pack directive

2007-11-19 David Barnett <daviebdawg@gmail.com>
  * Fixed endianness bugs in gpvc based on patch by Steve Tell (bug #803352)

2007-11-18 David Barnett <daviebdawg@gmail.com>
  * Changed "mode" directive on sx48/sx52 to support 5 bits (FR #835201)

2007-11-18 David Barnett <daviebdawg@gmail.com>
  * Changed COFF v2 optional magic number to 0x5678 (same as COFF v1)
  * Fixed strange errors in sx.asm and pageselw2.asm tests expected output

2007-11-18 David Barnett <daviebdawg@gmail.com>
  * Fixed COFF magic number regression

2007-11-17 David Barnett <daviebdawg@gmail.com>
  * Fixed CONFIG definitions for 16c54a and 16c715 (in PIC headers)

2007-11-14 David Barnett <daviebdawg@gmail.com>
  * Updated gpasm manpage for flag to output new COFF format (-C)

2007-11-13 David Barnett <daviebdawg@gmail.com>
  * Merged changes from patch by Andreas Kabel to support the new COFF format
  across all of gputils

2007-11-12 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed -g option to give meaningful error instead of failed
  assertion when missing .file directive (bug #1825940)

2007-11-11 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Added support for 18f2321

2007-11-11 David Barnett <daviebdawg@gmail.com>